@@ -6,7 +6,7 @@
 #
 # EDIT THIS FILE WITH CAUTION  (invoke-plot_summary.texi)
 #
-# It has been AutoGen-ed  April 26, 2016 at 08:25:00 PM by AutoGen 5.18.5
+# It has been AutoGen-ed  May  6, 2016 at 09:12:48 AM by AutoGen 5.18.5
 # From the definitions    plot_summary-opts.def
 # and the template file   agtexi-cmd.tpl
 @end ignore
@@ -101,7 +101,7 @@ This option takes a string argument.
         This is string is passed directly to the @code{gnuplot set terminal}
         command.  Default is @code{x11} if @code{DISPLAY} is set and
         @code{dumb} is it's not'. See output from @code(gnuplot -e "set
-        terminal") for the list of avalaible options.
+        terminal") for the list of available options.
 @node plot_summary output-file
 @subsection output-file option
 @cindex plot_summary-output-file
