@@ -1,9 +1,9 @@
-.Dd April 26 2016
+.Dd May 6 2016
 .Dt PLOT_SUMMARY 1plot_summarymdoc User Commands
 .Os
 .\"  EDIT THIS FILE WITH CAUTION  (plot_summary-opts.mdoc)
 .\"
-.\"  It has been AutoGen-ed  April 26, 2016 at 08:25:04 PM by AutoGen 5.18.5
+.\"  It has been AutoGen-ed  May  6, 2016 at 09:12:50 AM by AutoGen 5.18.5
 .\"  From the definitions    plot_summary-opts.def
 .\"  and the template file   agmdoc-cmd.tpl
 .Sh NAME
@@ -55,7 +55,7 @@ Gnuplot terminal.
         This is string is passed directly to the \fBgnuplot set terminal\fP
         command.  Default is \fBx11\fP if \fBDISPLAY\fP is set and
         \fBdumb\fP is it's not'. See output from @code(gnuplot \-e "set
-        terminal") for the list of avalaible options.
+        terminal") for the list of available options.
 .It  Fl \-output\-file  Ns = Ns Ar str 
 Output file.
 .sp
