@@ -1,4 +1,8 @@
 ---
+
+* Fix typo in ntp-wait and plot_summary.  HStenn.
+
+---
 (4.2.8p7) 2016/04/26 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Sec 2901] KoD packets must have non-zero transmit timestamps.  HStenn.
